# Instagram

./: README.md  pyproject.toml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: admin.py  models.py
config/: authentication.py  settings.py  urls.py
dms/: admin.py  models.py
dms/migrations/: 0001_initial.py  0002_message_updated_at_alter_chatroom_created_at_and_more.py  0003_rename_text_message_text.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_prince_house_price.py  0003_rename_price_house_price_per_night.py  0004_house_max_guest_number_house_pet_allowed.py
legacy/houses/: admin.py  models.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_remove_photo_description.py  0003_remove_photo_name_video_updated_at_and_more.py  0004_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  (+2 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
