[tool.poetry]
name = "instagram-backend"
version = "0.1.0"
description = "cloning instagram with Django & React"
authors = ["짱짱맨 <60203153+kksjjm@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pillow = "^10.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
